--- a/modules/ROOT/pages/git.adoc
+++ b/modules/ROOT/pages/git.adoc
@@ -1,8 +1,7 @@
-= Git
+= Git image:icons/git.png[the Git logo,50,50]
 
 Git is great!
 
-image::icons/git.png[the Git logo]
 
 For an idea of how I use Git in my typical workflow, see the xref:docs-as-code[Docs as code] page. 
 
