--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,17 +1,17 @@
 * xref:index.adoc[Welcome]
 * Principles
-** xref:docs-as-code.adoc[]
-** xref:agile.adoc[]
+** xref:principles/docs-as-code.adoc[]
+** xref:principles/agile.adoc[]
 * Tools
-** xref:git.adoc[]
-** xref:madcap-flare.adoc[]
-** xref:jira.adoc[]
-** xref:hugo.adoc[]
-** xref:antora.adoc[]
-** xref:vale.adoc[]
-** xref:text-editors.adoc[]
+** xref:tools/git.adoc[]
+** xref:tools/madcap-flare.adoc[]
+** xref:tools/jira.adoc[]
+** xref:tools/hugo.adoc[]
+** xref:tools/antora.adoc[]
+** xref:tools/vale.adoc[]
+** xref:tools/text-editors.adoc[]
 * Writing samples 
-** xref:feature.adoc[]
-** xref:release-notes.adoc[]
-** xref:portfolio.adoc[]
+** xref:writing-samples/feature.adoc[]
+** xref:writing-samples/release-notes.adoc[]
+** xref:writing-samples/portfolio.adoc[]
 * xref:resume.adoc[]
