--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -1,3 +1,5 @@
 = Vale
 
 adjusted FirstPerson.yml, FleschKincaid to grade level 9 since portfolio's are jargon-heavy and often an area where you have to pack in too much info in too little space...
+
+do an includes for the accept.txt vocab terms (your list is even case-sensitive, which means if--for example--you've added a proper noun as an exception for sentence case heading capitalization, Vale will enforce this capitalization everywhere, which means if you have improper capitalization on this proper noun, Vale flags it!). Use Global Project Linking (flags lowercase) as an example.
