--- a/modules/ROOT/pages/tools/madcap-flare.adoc
+++ b/modules/ROOT/pages/tools/madcap-flare.adoc
@@ -2,7 +2,8 @@
 
 = MadCap Flare
 
-image:icons/flare.png[MadCap Flare logo,50,50]
+image::icons/flare.png[MadCap Flare logo,50,50]
+
 A majority of my tech writing experience is in MadCap Flare. Single-sourcing content for multiple outputs with conditional text, targets, and TOCs is like riding a bike (a somewhat heavy bike that crashes if you change gears too quickly). I poke fun at Flare because I've worked within it for so long. Since it's proprietary, it's Flare's way or the highway, and its lacking extensibility feels like a limitation after years of use. Still, it's a solid tool that I'm more than comfortable in.
 
 Perhaps most importantly, Flare is a fully featured product with a friendly UI. I've found this makes the learning curve less steep, which means you get more help from other tech writers!
@@ -73,7 +74,7 @@ Managing global variables is simple with Flare. They're automatically included, 
 
 == Conditional text
 
-Flare's conditional text is managed similar to variables. The conditions you wish to exclude are stored logically in a simple table with label, definition, and a include/exclude filter columns for each row. 
+You manage Flare's conditional text similar to variables. The conditions you wish to exclude are stored in a simple table with an include/exclude filter columns for each row. 
 
 Someone common examples are to use a `PrintOnly` condition to exclude content from online targets, or an `AdminOnly` condition to hide admininstrator-level content from general use docs. You can apply conditions to an entire file to exclude it from a specific target, or you can highlight in-line text to filter accordingly. 
 
